--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -14,7 +14,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  Build:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -38,7 +38,7 @@ jobs:
         path: ./public
 
 
-  Deploy:
+  deploy:
     runs-on: ubuntu-latest
     needs: build
 
